shortlink get collection and entity complete
