# module/Shortlink/src/V1/Rest/Shortlink/ShortlinkEntity.php
@@ -1,0 +1,6 @@
+<?php
+namespace Shortlink\V1\Rest\Shortlink;
+
+class ShortlinkEntity
+{
+}
