# module/Shortlink/src/V1/Rest/Shortlink/ShortlinkResourceFactory.php
@@ -1,0 +1,10 @@
+<?php
+namespace Shortlink\V1\Rest\Shortlink;
+
+class ShortlinkResourceFactory
+{
+    public function __invoke($services)
+    {
+        return new ShortlinkResource($services->get('faucetdev'));
+    }
+}
